HISTORY

  Version 5.0.0  2010-10-
  ------------------------------------------------------------------------------
    alpha2:
    - Developers: build scripts were highly optimized
    - mistakes preventing build on the path containing spaces were eliminated
    - the following translations were updated:

      Chinese (Simplified)

    alpha1:
    - GUI was redesigned to be much more ergonomic (comfortable for daily use)
    - ability to change preferences without the need to restart GUI was added
    - ability to resize GUI window at any time was added;
      cluster map scales now automatically
    - GUI flicker on window resize was reduced
    - better hotkeys were assigned to GUI actions
    - the process of adding/editing/testing of translations
      was highly simplified
    - GUI uses system font respecting global Windows settings anywhere
      except of the list control for which mono-space fonts are more preferred
    - GUI uses custom font in all dialog boxes in case of Burmese (Padauk)
      translation, because otherwise Windows fail to display texts correctly
    - separate Configuration dialog was retired
    - Language Selector was retired
    - ability to run multiple instances simultaneously was added
    - the driver has been completely reworked to increase its reliability
      and flexibility; many complicated algorithms were replaced
      by obvious ones; as a side effect we have a noticeable speedup
      of the volume analysis
    - filter pattern length limitation (4096 characters) was removed
    - added hints about using CHKDSK to get a consistent drive
    - "Tips and Tricks" moved to separate handbook page to be accessible
      from the "Best Practice" help menu item
    - the following translations were added:

      Estonian, Vietnamese(VI), Burmese(Padauk), Spanish(ES)

    - the following translations were updated:

      Portuguese(BR), Czech, French (FR), Portuguese, Catalan
